--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body{
-    background-color: darkcyan;
-
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(to top, #00c6fb 0%, #3079f0 100%);
 }
 
 .heading{
-    font-size: 30;
-    font-weight: bold;
-    color: black;
-    width: 100%;
-    height: 65px;
+font-size: 23px;
+width: 100%;
+margin: 0px;
+margin-top: 1px;
+background-color: greenyellow;
 }
 
